--- a/fipe-explorer-app/package.json
+++ b/fipe-explorer-app/package.json
@@ -12,11 +12,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@types/recharts": "^1.8.29",
     "cors": "^2.8.5",
     "express": "^5.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^7.6.0"
+    "react-router-dom": "^7.6.0",
+    "recharts": "^2.15.3"
   },
   "devDependencies": {
     "@types/react": "^18.2.55",
