--- a/fipe-explorer-app/package.json
+++ b/fipe-explorer-app/package.json
@@ -15,6 +15,7 @@
     "@types/recharts": "^1.8.29",
     "cors": "^2.8.5",
     "express": "^5.1.0",
+    "framer-motion": "^12.11.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^7.6.0",
